# clingo-xor

./: CHANGES.md  CMakeLists.txt  MANIFEST.in  Makefile  README.md  setup.py
.github/: conda.py  deploy.yml  manylinux.py  pipsource.py  pipwinmac.py  trigger.sh
.github/conda/: bld.bat  build.sh  meta.yaml
.github/ppa-wip/: build.sh
.github/ppa-wip/bionic/debian/: NEWS  changelog  control  copyright  rules
.github/ppa-wip/focal/debian/: changelog  control
.github/workflows/: test.yml
app/: CMakeLists.txt
app/lib/: CMakeLists.txt
app/lib/clingo-xor-app/: app.hh
app/lib/src/: app.cc
app/src/: main.cc
cmake/: ClingoXORConfig.cmake.in  FindGperftools.cmake
doc/: xor-simplex.lyx
examples/: long-simplex.lp  long-translate.lp  long.lp  sat.lp  simple.lp  unsat.lp  xorro.lp
libclingo-xor/: CMakeLists.txt  clingo-xor.h
libclingo-xor/src/: clingo-xor.cc  parsing.cc  parsing.hh  problem.cc  problem.hh  solving.cc  solving.hh  util.hh
libclingo-xor/tests/: CMakeLists.txt  parsing.cc  solving.cc  util.cc
libpyclingo-xor/: CMakeLists.txt  _clingoxor.c  compile.py
libpyclingo-xor/clingoxor/: __init__.py  __main__.py
